syntax = "proto3";

package common;

option go_package = "github.com/KonstantinGasser/datalab/common";





message AppInfo {
    string uuid = 1;
    string name = 2;
    string URL = 3;
    string description = 4;
    string owner = 5;
    repeated AppMember member = 6;
    bool locked = 7;
}
message AppMember {
    string uuid = 1;
    string role = 2;
    int32 status = 3;
}

message AppMetaInfo {
    string name = 1;
    string uuid = 2;
}

message AppConfigInfo {
    repeated Funnel funnel = 1;
    repeated Campaign campaign = 2;
    repeated BtnTime btn_time = 3;
    bool locked = 4;
}
message Funnel {
    int32 id = 1;
    string name = 2;
    string transition = 3;
}
message Campaign {
    int32 id = 1;
    string name = 2;
    string prefix = 3;
}
message BtnTime {
    int32 id = 1;
    string name = 2;
    string btn_name = 3;
}

message UserInfo {
    string uuid = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string orgn_domain = 5;
    string orgn_position = 6;
    string avatar = 7;
}

message UserMetaInfo {
    string uuid = 1;
    string username = 2;
}

message AppTokenInfo {
    string token = 1;
    int64 exp = 2;
}

message UserTokenClaims {
    string uuid = 1;
    string organization = 2;
    UserPermissions permissions = 3;
}

message UserPermissions {
    repeated AppPermission apps = 1;
}

enum AppRole {
    OWNER = 0;
    EDITOR = 1;
    VIEWER = 2;

}

message AppPermission {
    string app_uuid = 1;
    AppRole role = 2;
}



message AppSubset {
    string uuid = 1;
    string name = 2;
}

message AuthedUser {
    string uuid = 1;
    string organization = 2;
    string username = 3;
    repeated string read_write_apps = 4;
}

message ReadWriteApps {
    string uuid = 1;
}

message AppAccessToken {
    string jwt = 1;
    int64 expiration = 2;
    bool locked = 3;
}

message AppConfigurations {
    repeated Stage funnel = 1;
    repeated Record campaign = 2;
    repeated BtnDef btn_time = 3;
    bool locked = 4;
}


message Stage {
    int32 id = 1;
    string name = 2;
    string transition = 3;
    int32 trigger = 4;
}
message Record {
    int32 id = 1;
    string name = 2;
    string suffix = 3;
}
message BtnDef {
    int32 id = 1;
    string name = 2;
    string btn_name = 3;
}